--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib dist coverage",
     "prepublish": "npm-run-all clean build",
+    "pretest": "npm run build",
     "test": "ava"
   },
   "dependencies": {
@@ -21,7 +22,8 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-register": "^6.16.3",
     "npm-run-all": "^3.1.0",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "temp-write": "^2.1.0"
   },
   "repository": "ratson/sync-package-version",
   "license": "MIT",
