--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib dist coverage",
+    "lint": "eslint --ext js,md .",
     "prepublish": "npm-run-all clean build",
     "pretest": "npm run build",
-    "test": "ava"
+    "test": "ava",
+    "posttest": "npm run lint"
   },
   "dependencies": {
     "execa": "^0.7.0",
@@ -22,6 +24,9 @@
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
+    "eslint": "^4.2.0",
+    "eslint-config-concise": "^0.9.1",
+    "eslint-config-concise-esnext": "^0.8.0",
     "npm-run-all": "^4.0.2",
     "rimraf": "^2.6.1",
     "temp-write": "^3.3.0"
