--- a/package.json
+++ b/package.json
@@ -2,29 +2,32 @@
   "name": "sync-package-version",
   "version": "0.0.5",
   "description": "Sync version number from package.json",
-  "bin": "lib/cli.js",
+  "bin": {
+    "sync-package-version": "lib/cli.js",
+    "sync-pkg-version": "lib/cli.js"
+  },
   "main": "lib/index.js",
   "scripts": {
     "lint": "eslint --ext js,md .",
-    "test": "ava",
+    "test": "jest",
     "posttest": "npm run lint"
   },
   "dependencies": {
-    "execa": "^0.7.0",
-    "meow": "^3.7.0",
-    "mz": "^2.6.0",
-    "read-pkg": "^2.0.0"
+    "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
+    "read-pkg": "^5.0.0",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
-    "ava": "^0.21.0",
-    "babel-register": "^6.24.1",
-    "eslint": "^4.2.0",
-    "eslint-config-concise": "^0.9.1",
-    "eslint-config-concise-esnext": "^0.8.0",
-    "temp-write": "^3.3.0"
+    "eslint": "^7.29.0",
+    "eslint-config-concise": "^0.40.1",
+    "eslint-config-concise-esnext": "^0.40.1",
+    "eslint-config-concise-jest": "^0.40.1",
+    "jest": "^27.0.5",
+    "temp-write": "^4.0.0"
   },
   "engines": {
-    "node": ">= 8"
+    "node": ">= 12"
   },
   "repository": "ratson/sync-package-version",
   "license": "MIT",
